--- a/css_general/css_contacto/estilo.css
+++ b/css_general/css_contacto/estilo.css
@@ -11,7 +11,7 @@
   }
  /* Seccion de header */
  header {
-  background-image: url(/imgs_general/imgs_menu/HEADER.png);
+  background-image: url(../../imgs_general/imgs_menu/HEADER.png);
   display: flex;
   align-items: center;
   justify-content: space-between;
