--- a/css_general/css_menu/estilo_menu.css
+++ b/css_general/css_menu/estilo_menu.css
@@ -21,7 +21,7 @@ h4{
 
 /*Header y su contenido*/
 header{
-    background-image: url(/imgs_general/imgs_menu/HEADER.png);
+    background-image: url(../../imgs_general/imgs_menu/HEADER.png);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -30,7 +30,7 @@ header{
 }
 /* Footer */
 footer{
-    background-image: url(/imgs_general/imgs_menu/HEADER.png);
+    background-image: url(../../imgs_general/imgs_menu/HEADER.png);
     padding: 20px;
     text-align: center;
 }
@@ -75,7 +75,7 @@ html, body {
 }
 /* Cuerpo */
 section {
-    background-image: url(/imgs_general/imgs_menu/fondo.jpg);
+    background-image: url(../../imgs_general/imgs_menu/fondo.jpg);
     background-size: cover;
     width: 100%;
     padding: 30px 0;
