--- a/css_general/css_reservaciones/esilo_header.css
+++ b/css_general/css_reservaciones/esilo_header.css
@@ -1,5 +1,5 @@
 header{
-    background-image: url(/imgs_general/imgs_menu/HEADER.png);
+    background-image: url(../../imgs_general/imgs_menu/HEADER.png);
     display: flex;
     align-items: center;
     justify-content: space-between;
