--- a/css_general/css_reservaciones/estilo_footer.css
+++ b/css_general/css_reservaciones/estilo_footer.css
@@ -1,5 +1,5 @@
 footer{
-    background-image: url(/imgs_general/imgs_reservacion/HEADER.png);
+    background-image: url(../../imgs_general/imgs_reservacion/HEADER.png);
     padding: 20px;
     text-align: center;
 }
