--- a/css_general/css_contacto/estilo.css
+++ b/css_general/css_contacto/estilo.css
@@ -90,7 +90,7 @@
 
   /* Footer */
   footer{
-    background-image: url(../../img/HEADER.png);
+    background-image: url(../../imgs_general/imgs_contacto/HEADER.png);
     padding: 20px;
     text-align: center;
 }
